infra/k8s/book-service-depl-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: book-service
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: book-service-srv
spec:
  type: ClusterIP
  selector:
    app: book-service
  ports:
    - name: book-service
      protocol: TCP
      port: 8081
      targetPort: 8081
