infra/k8s/member-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-service
  template:
    metadata:
      labels:
        app: member-service
    spec:
      containers:
        - name: member-service
          image: goodmanisltd/bookcrossing-member-service:latest
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: member-service-srv
spec:
  type: ClusterIP
  selector:
    app: member-service
  ports:
    - name: member-service
      protocol: TCP
      port: 8087
      targetPort: 8087
