infra/k8s/message-service-depl-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: message-service
          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: message-service-srv
spec:
  type: ClusterIP
  selector:
    app: message-service
  ports:
    - name: message-service
      protocol: TCP
      port: 8089
      targetPort: 8089
