infra/k8s/order-service-depl-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-srv
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: order-service
      protocol: TCP
      port: 8083
      targetPort: 8083
