infra/k8s/post-service-depl-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: post-service
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: post-service-srv
spec:
  type: ClusterIP
  selector:
    app: post-service
  ports:
    - name: post-service
      protocol: TCP
      port: 8085
      targetPort: 8085
